<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="multi.platform.example_lib.shared.app.stockedit.StockEditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:paddingBottom="65dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <EditText
                android:id="@+id/a"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="name"
                android:hint="@string/stock_edit_not_blank"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.field1}"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_a_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@{vm.field1Error != null ? vm.field1Error : ``}"
                android:textColor="@color/negative"
                android:textSize="12sp"
                android:visibility="@{vm.field1Error != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/a" />

            <EditText
                android:id="@+id/b"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:autofillHints="name"
                android:hint="@string/stock_edit_min_8"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.field2}"
                app:layout_constraintTop_toBottomOf="@id/tv_a_error" />

            <TextView
                android:id="@+id/tv_b_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@{vm.field2Error != null ? vm.field2Error : ``}"
                android:textColor="@color/negative"
                android:textSize="12sp"
                android:visibility="@{vm.field2Error != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/b" />

            <EditText
                android:id="@+id/c"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:autofillHints="name"
                android:hint="@string/stock_edit_email_format"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.field3}"
                app:layout_constraintTop_toBottomOf="@id/tv_b_error" />

            <TextView
                android:id="@+id/tv_c_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@{vm.field3Error != null ? vm.field3Error : ``}"
                android:textColor="@color/negative"
                android:textSize="12sp"
                android:visibility="@{vm.field3Error != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/c" />

            <EditText
                android:id="@+id/d"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:autofillHints="name"
                android:hint="@string/stock_edit_phone_format"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.field4}"
                app:layout_constraintTop_toBottomOf="@id/tv_c_error" />

            <TextView
                android:id="@+id/tv_d_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@{vm.field4Error != null ? vm.field4Error : ``}"
                android:textColor="@color/negative"
                android:textSize="12sp"
                android:visibility="@{vm.field4Error != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/d" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Button.Poppins.SolidPrimary.Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="name"
                android:text="@string/edit"
                app:layout_constraintTop_toBottomOf="@id/tv_d_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>