<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="multi.platform.example_lib.shared.app.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@color/grey60" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_regular"
            style="@style/Text.Poppins.Body3.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/menu_profile"
            app:layout_constraintTop_toBottomOf="@id/cv_profile_image" />

        <TextView
            android:id="@+id/tv_semi_bold"
            style="@style/Text.Poppins.Body3.SemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/menu_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_regular" />

        <TextView
            android:id="@+id/tv_bold"
            style="@style/Text.Poppins.Body3.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/menu_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_semi_bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_out"
            style="@style/MaterialOutlinedButton.Poppins.StrokeNegative.Rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/MaterialButton.Poppins.SolidPrimary.Rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>